--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "prettier": "^2.6.2",
     "react": "^18.1.0",
+    "react-app-rewire-alias": "^1.1.7",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.52.2",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4",
-    "prettier": "^2.6.2",
-    "react-app-rewire-alias": "^1.1.7",
-    "react-app-rewired": "^2.2.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
