--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "classnames": "^2.3.1",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-app-rewire-alias": "^1.1.7",
