--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "jarvs-minesweeper",
+  "description": "JARVS(Just A Rather Very Simple) Minesweeper",
   "version": "0.1.0",
+  "author": "Ioram Gordadze <Yoh0xFF@gmail.com>",
+  "license": "MIT",
+  "repository": "https://github.com/Yoh0xFF/jarvs-minesweeper",
   "private": true,
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
+    "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.css'"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -21,13 +32,6 @@
     "sass": "^1.52.2",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.css'"
   },
   "eslintConfig": {
     "extends": [
