--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
       "@app/*": [
-        "src/*"
+        "./*"
       ]
     }
   },
