--- a/package.json
+++ b/package.json
@@ -6,32 +6,31 @@
   "license": "MIT",
   "repository": "https://github.com/Yoh0xFF/jarvs-minesweeper",
   "private": true,
+  "homepage": ".",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.css'"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.scss'"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.1",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "classnames": "^2.3.1",
-    "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-app-rewire-alias": "^1.1.7",
-    "react-app-rewired": "^2.2.1",
-    "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.1",
+    "@trivago/prettier-plugin-sort-imports": "3.2.0",
+    "@types/jest": "28.1.4",
+    "@types/node": "18.0.1",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "classnames": "2.3.1",
+    "prettier": "2.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.53.0",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "sass": "1.53.0",
+    "typescript": "4.7.4",
+    "web-vitals": "2.1.4"
   },
   "eslintConfig": {
     "extends": [
