--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
-    "paths": {
-      "@app/*": [
-        "./*"
-      ]
-    }
+    "baseUrl": "src",
   },
   "include": [
     "src"
