--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
+    "@types/canvas-confetti": "1.4.2",
     "@types/jest": "28.1.4",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "canvas-confetti": "1.5.1",
     "classnames": "2.3.1",
     "prettier": "2.7.1",
     "react": "18.2.0",
