--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.scss'"
+    "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.scss'",
+    "deploy": "gh-pages -d build -u 'github-actions-bot <support+actions@github.com>'"
   },
   "dependencies": {
     "@testing-library/jest-dom": "5.16.4",
@@ -26,6 +27,7 @@
     "@types/react-dom": "18.0.5",
     "canvas-confetti": "1.5.1",
     "classnames": "2.3.1",
+    "gh-pages": "^4.0.0",
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
