--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   "dependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "14.2.1",
-    "@trivago/prettier-plugin-sort-imports": "3.2.0",
-    "@types/canvas-confetti": "1.4.2",
-    "@types/jest": "28.1.4",
-    "@types/node": "18.0.1",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
+    "@testing-library/user-event": "14.3.0",
+    "@trivago/prettier-plugin-sort-imports": "3.3.0",
+    "@types/canvas-confetti": "1.4.3",
+    "@types/jest": "28.1.6",
+    "@types/node": "18.0.6",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "canvas-confetti": "1.5.1",
     "classnames": "2.3.1",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "4.0.0",
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "sass": "1.53.0",
+    "sass": "1.54.0",
     "typescript": "4.7.4",
     "web-vitals": "2.1.4"
   },
