--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,8 +1,7 @@
 name: Deploy GitHub Page
 
 on:
-  push:
-    branches: [ production ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -21,7 +20,7 @@ jobs:
       - uses: actions/cache@v4
         id: cache
         with:
-          path: "**/node_modules"
+          path: '**/node_modules'
           key: npm-v2-${{ hashFiles('**/package-lock.json') }}
           restore-keys: npm-v2-
 
