--- a/package.json
+++ b/package.json
@@ -6,35 +6,42 @@
   "license": "MIT",
   "repository": "https://github.com/Yoh0xFF/jarvs-minesweeper",
   "private": true,
+  "type": "module",
   "homepage": ".",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "test": "vitest run",
+    "test:dev": "vitest dev",
     "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.scss'",
     "deploy": "gh-pages -d build -u 'github-actions-bot <support+actions@github.com>'"
   },
   "dependencies": {
+    "canvas-confetti": "1.9.3",
+    "classnames": "2.5.1",
+    "gh-pages": "6.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "web-vitals": "4.2.2"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "6.4.8",
     "@testing-library/react": "16.0.0",
     "@testing-library/user-event": "14.5.2",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/canvas-confetti": "1.6.4",
-    "@types/jest": "29.5.12",
     "@types/node": "22.0.0",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.10",
-    "canvas-confetti": "1.9.3",
-    "classnames": "2.5.1",
-    "gh-pages": "6.1.1",
+    "@vitejs/plugin-react": "4.3.1",
+    "jsdom": "24.1.1",
     "prettier": "2.8.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
+    "prettier-plugin-organize-imports": "3.2.4",
+    "prettier-plugin-packagejson": "2.5.0",
     "sass": "1.77.8",
     "typescript": "5.5.4",
-    "web-vitals": "4.2.2"
+    "vite": "5.3.5",
+    "vitest": "2.0.5"
   },
   "eslintConfig": {
     "extends": [
