--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "gh-pages": "6.3.0",
     "web-vitals": "5.0.3"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.44.2"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
