--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc && vite build",
     "test": "vitest run",
     "test:dev": "vitest dev",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
     "format": "prettier --write 'src/**/*.ts' 'src/**/*.tsx' 'src/**/*.scss'",
     "deploy": "gh-pages -d dist -u 'github-actions-bot <support+actions@github.com>'",
     "clean": "npx rimraf ./**/dist ./**/node_modules"
@@ -25,23 +26,30 @@
     "react-dom": "19.2.4"
   },
   "devDependencies": {
+    "@eslint/js": "9.39.3",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
     "@testing-library/user-event": "14.6.1",
-    "@types/react": "19.2.14",
     "@types/canvas-confetti": "1.9.0",
     "@types/node": "25.3.2",
+    "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
+    "eslint": "9.39.3",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "gh-pages": "6.3.0",
+    "globals": "17.3.0",
     "jsdom": "28.1.0",
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-packagejson": "3.0.0",
     "sass": "1.97.3",
     "typescript": "5.9.3",
-    "vitest": "4.0.18",
+    "typescript-eslint": "8.56.1",
     "vite": "7.3.1",
-    "gh-pages": "6.3.0",
+    "vitest": "4.0.18",
     "web-vitals": "5.1.0"
   },
   "optionalDependencies": {
